--- a/gb/23/8/16/n14055206.md
+++ b/gb/23/8/16/n14055206.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>南加州楚景市第26届柠檬节举行</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14055265-2308161117552371-600x400.jpg" />///image2=```diff
 - 2023年8月12日，南加州圣地亚哥县南郡的楚景市第26届柠檬节在市中心第三大道举行。楚景市（Chula Vista）曾被称为“世界柠檬之都”。图为Donegan一家三代人在柠檬节上。（田磊/大纪元）
@@ -8,55 +8,44 @@
 <h6>2023年8月12日，南加州圣地亚哥县南郡的楚景市第26届柠檬节在市中心第三大道举行。楚景市（Chula Vista）曾被称为“世界柠檬之都”。图为Donegan一家三代人在柠檬节上。（田磊/大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年08月16日讯】（大纪元记者田磊美国圣地亚哥报导）加州圣地亚哥县南郡的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A5%9A%E6%99%AF%E5%B8%82.md#1">楚景市</a>（Chula Vista）曾被称为“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9F%A0%E6%AA%AC%E4%B9%8B%E9%83%BD.md#1">柠檬之都</a>”。随着城市变迁，柠檬林不再。然而每年夏季在市中心举行的“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9F%A0%E6%AA%AC%E8%8A%82.md#1">柠檬节</a>（Lemon Festival）”，仿佛将这里再变成柠檬园。</p>
-<p>8月12日，第26届<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A5%9A%E6%99%AF%E5%B8%82.md#1">楚景市</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9F%A0%E6%AA%AC%E8%8A%82.md#1">柠檬节</a>在楚景市充满文化气息的第三大道和周围街区举行。人们携家带口，或三俩结伴，徜徉在街道上，沐浴在阳光下，随着音乐起舞，品尝风味小吃和必不可少的新鲜<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9F%A0%E6%AA%AC%E6%B1%81.md#1">柠檬汁</a>，享受快乐时光。</p>
-<p><a class=></a><a href="https://d5tsat6yropq6.cloudfront.net/R8aJsHp2e"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a width="640" b="360" src="https://www.ganjingworld.com/embed/1g2tsub877q2NbiY2S2sWLqlZ1g01c" title="南加州夏季柠檬节" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;" allowfullscreen></a></p>
-<p>柠檬色穿扮的Donegan一家三代人说，他们每年都来柠檬节。“我们非常喜欢，孩子们也很喜欢，他们去看不同的摊位，那里有一些小奖品。还有那些食品，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9F%A0%E6%AA%AC%E6%B1%81.md#1">柠檬汁</a>和甜点！我们都非常享受。”Donegan太太说。</p>
-<p>柠檬节活动经理Sandi Cottrell告诉大纪元，组织者们想了很多办法，让活动内容更加丰富。除了音乐舞台，厨艺赛，柠檬服饰赛，今年还新增加了挤柠檬比赛。“这是一个适合家庭的活动，我们真的增加了很多内容，希望能把人们带到这里，庆祝我们作为世界<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9F%A0%E6%AA%AC%E4%B9%8B%E9%83%BD.md#1">柠檬之都</a>的历史，享受这个活动所提供的。”</p>
+	<p>【大纪元2023年08月16日讯】（大纪元记者田磊美国圣地亚哥报导）加州圣地亚哥县南郡的楚景市（Chula Vista）曾被称为“柠檬之都”。随着城市变迁，柠檬林不再。然而每年夏季在市中心举行的“柠檬节（Lemon Festival）”，仿佛将这里再变成柠檬园。</p>
+<p>8月12日，第26届楚景市柠檬节在楚景市充满文化气息的第三大道和周围街区举行。人们携家带口，或三俩结伴，徜徉在街道上，沐浴在阳光下，随着音乐起舞，品尝风味小吃和必不可少的新鲜柠檬汁，享受快乐时光。</p>
+<p><a class=></a><a href="https://d169wr9ny4m3ww.cloudfront.net/A6oz58KRr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a width="640" b="360" src="https://www.ganjingworld.com/embed/1g2tsub877q2NbiY2S2sWLqlZ1g01c" title="南加州夏季柠檬节" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;" allowfullscreen></a></p>
+<p>柠檬色穿扮的Donegan一家三代人说，他们每年都来柠檬节。“我们非常喜欢，孩子们也很喜欢，他们去看不同的摊位，那里有一些小奖品。还有那些食品，柠檬汁和甜点！我们都非常享受。”Donegan太太说。</p>
+<p>柠檬节活动经理Sandi Cottrell告诉大纪元，组织者们想了很多办法，让活动内容更加丰富。除了音乐舞台，厨艺赛，柠檬服饰赛，今年还新增加了挤柠檬比赛。“这是一个适合家庭的活动，我们真的增加了很多内容，希望能把人们带到这里，庆祝我们作为世界柠檬之都的历史，享受这个活动所提供的。”</p>
 <p>楚景市市长John McCann到活动现场为厨艺赛获奖者颁奖。他告诉大纪元：“这是一个非常正面的社区活动，是一个吸引周围地区的人们来到楚景市的好机会，来体验我们那么多好的商店，和活动上的100多个摊位。”#</p>
-<p><figure id="attachment_14055266" aria-describedby="caption-attachment-14055266" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14055266-2308161117382371.jpg"><img class="size-large wp-image-14055266" src="https://i.epochtimes.com/assets/uploads/2023/08/id14055266-2308161117382371-600x400.jpg" alt="南加州楚景市柠檬节" title="南加州楚景市柠檬节" width="600" b="400" /></a><figcaption id="caption-attachment-14055266" class="wp-caption-text">2023年8月12日，南加州圣地亚哥县南郡的楚景市第26届柠檬节在市中心第三大道举行。图为市长John McCann（右三）、活动经理Sandi Contrell（右二）和（左起）厨艺赛评委、《圣地亚哥联合论坛|报评论人Pam Kragen，楚景市商会执行长Marcy Weaver，活动主持、Gente Bonita杂志创办人Fabiola Gálvez等在柠檬节上。（田磊/大纪元）</figcaption></figure><figure id="attachment_14055267" aria-describedby="caption-attachment-14055267" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14055267-2308161117492371.jpg"><img class="size-large wp-image-14055267" src="https://i.epochtimes.com/assets/uploads/2023/08/id14055267-2308161117492371-600x400.jpg" alt="南加州楚景市柠檬节" title="南加州楚景市柠檬节" width="600" b="400" /></a><figcaption id="caption-attachment-14055267" class="wp-caption-text">2023年8月12日，南加州圣地亚哥县南郡的楚景市第26届柠檬节在市中心第三大道举行。楚景市（Chula Vista）曾被称为“世界柠檬之都”。（田磊/大纪元）</figcaption></figure><figure id="attachment_14055268" aria-describedby="caption-attachment-14055268" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14055268-2308161117522371.jpg"><img class="size-large wp-image-14055268" src="https://i.epochtimes.com/assets/uploads/2023/08/id14055268-2308161117522371-600x400.jpg" alt="南加州楚景市柠檬节" title="南加州楚景市柠檬节" width="600" b="400" /></a><figcaption id="caption-attachment-14055268" class="wp-caption-text">2023年8月12日，南加州圣地亚哥县南郡的楚景市第26届柠檬节在市中心第三大道举行。各种柠檬汁成为街市上必不可少的饮料。（田磊/大纪元）</figcaption></figure></p>
+<p><figure id="attachment_14055266" aria-describedby="caption-attachment-14055266" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14055266-2308161117382371.jpg"><img decoding="async" class="size-large wp-image-14055266" src="https://i.epochtimes.com/assets/uploads/2023/08/id14055266-2308161117382371-600x400.jpg" alt="南加州楚景市柠檬节" title="南加州楚景市柠檬节" width="600" b="400" /></a><figcaption id="caption-attachment-14055266" class="wp-caption-text">2023年8月12日，南加州圣地亚哥县南郡的楚景市第26届柠檬节在市中心第三大道举行。图为市长John McCann（右三）、活动经理Sandi Contrell（右二）和（左起）厨艺赛评委、《圣地亚哥联合论坛|报评论人Pam Kragen，楚景市商会执行长Marcy Weaver，活动主持、Gente Bonita杂志创办人Fabiola Gálvez等在柠檬节上。（田磊/大纪元）</figcaption></figure><figure id="attachment_14055267" aria-describedby="caption-attachment-14055267" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14055267-2308161117492371.jpg"><img decoding="async" class="size-large wp-image-14055267" src="https://i.epochtimes.com/assets/uploads/2023/08/id14055267-2308161117492371-600x400.jpg" alt="南加州楚景市柠檬节" title="南加州楚景市柠檬节" width="600" b="400" /></a><figcaption id="caption-attachment-14055267" class="wp-caption-text">2023年8月12日，南加州圣地亚哥县南郡的楚景市第26届柠檬节在市中心第三大道举行。楚景市（Chula Vista）曾被称为“世界柠檬之都”。（田磊/大纪元）</figcaption></figure><figure id="attachment_14055268" aria-describedby="caption-attachment-14055268" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14055268-2308161117522371.jpg"><img decoding="async" class="size-large wp-image-14055268" src="https://i.epochtimes.com/assets/uploads/2023/08/id14055268-2308161117522371-600x400.jpg" alt="南加州楚景市柠檬节" title="南加州楚景市柠檬节" width="600" b="400" /></a><figcaption id="caption-attachment-14055268" class="wp-caption-text">2023年8月12日，南加州圣地亚哥县南郡的楚景市第26届柠檬节在市中心第三大道举行。各种柠檬汁成为街市上必不可少的饮料。（田磊/大纪元）</figcaption></figure></p>
 <p>#</p>
 <p>责任编辑：杨瑛</p>
 	
 <hr>
-<hr>
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052492.md#1">Lakeside教委和家长抗议性犯罪者住学校附近</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052486.md#1">酒驾肇事者涉嫌酿一死四伤 逃逸后被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052105.md#1">涉嫌做间谍期间 华裔海军正申请美国公民</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/6/n14049123.md#1">圣地亚哥市议会批准警察使用智能路灯</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279753.md#1">两个月婴孩被留车内数小时 不幸夭折</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279692.md#1">圣地亚哥拟斥资一亿美元聘顾问管理水坝安全</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279603.md#1">德尔玛大火有惊无险 数千人收到撤离令</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274513.md#1">加州5月房屋中位价再创新高 销量降</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/11/n10134744.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/27/n10744431.md#1" target="_blank">顽疾绝症不医而愈 小小少年们的神奇际遇</a></li><hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/3/n10021983.md#1" target="_blank">杨宁：官司风波再起 红色舞剧洗脑没商量</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/12/n11936131.md#1" target="_blank">台湾中大教授：《转法轮》启发研究思路</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052368.md#1">聊斋?山歌罗刹海市 隐喻之弹激起千层浪 马户又鸟知是谁？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14051960.md#1">【未解之谜】探秘中国第一神山</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14047740.md#1">【古道人生】皇帝因何震怒而将少年科甲的县令处决？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049758.md#1">林布兰的作品《花神》流露爱妻之情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/10/n14051512.md#1">英国小镇成UFO热点 目击事件多达300起</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14055177.md#1">【新闻大家谈】中国经济进入雷区</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14054969.md#1">【全球新闻】掩耳盗铃 中共不再公布青年失业率</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054716.md#1">【新唐人快报】中国经济加速倒车 人民币跌不休</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053392.md#1">习近平不去灾区 党媒连发文被指高级黑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053440.md#1">河北军政官员洪灾中坠机死消息被封 疑云未散</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053644.md#1">分析：中国正走向十年经济停滞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053268.md#1">张学友大马演唱会爆意外 唱到一半在台上跌倒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053912.md#1">医嘱暂停运动2个月 周润发疑偷偷跑步显憔悴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053977.md#1">喊昆凌“三宝妈”遭陆民曲解 周杰伦幽默回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053341.md#1">昆凌30岁生日 周杰伦逗趣称呼秀恩爱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054567.md#1">陆男团粉丝游行效应 刘若英西安演唱会传喊停</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048306.md#1">早期发现糖尿病的“蛛丝马迹” 防治有一关键</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048340.md#1">6招必学控糖法 中医控制糖尿病全攻略</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054228.md#1">上班假装很忙？ 全球调查：亚洲员工居多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053260.md#1">洁肤神器──魔芋海绵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053562.md#1">为什么吸尘器会发臭？应该如何处理？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277656.md#1">安宁病房护士经验谈：临终者最惊人的3件事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279001.md#1">【未解之谜】怪谈和尚：世界面临大重启 2024-2029很关键？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281733.md#1">【秦鹏观察】中共央行借入国债 无锚印钞来了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282167.md#1">【十字路口】“九龙城寨”透玄机 点破中共下场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14278998.md#1">分析：台商撤离冲击中国经济 也令中共尴尬</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280888.md#1">沈舟：中共海军急缺战列舰 但从未造过</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280483.md#1">唐嫣探班刘亦菲 4岁女儿被对方的热情吓坏</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281648.md#1">那英感染带状疱疹 以半边脸妆容亮相《歌手》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280459.md#1">巴奈致词喊勿忘天安门事件 金曲奖遭微博封杀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281700.md#1">何韵诗网上音乐会两度中断 因港警到场查身份</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280385.md#1">《怪兽8号》影评：乱吃东西竟成当英雄的机遇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281327.md#1">专家：在游轮上吃自助餐 盘子不能重复盛菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280722.md#1">空服员希望乘客在飞机上别做这件事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281364.md#1">到英国旅游数周 美国女子谈“文化冲击”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14281917.md#1">为什么棉质衣物洗了会缩水？ 如何抢救？</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/16/n14055206.htm">南加州楚景市第26届柠檬节举行</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/16/n14055206.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/8/16/n14055206.htm">南加州楚景市第26届柠檬节举行</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/8/16/n14055206.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
